--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,12 @@ Package: CEdecisiontree
 Type: Package
 Title: cost-effectiveness decision tree analysis
 Version: 0.1.0
-Author: Nathan Green
+Authors@R: person("Nathan", "Green", , "ngreen1@ic.ac.uk", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-2745-1736"))
 Maintainer: The package maintainer <nathan.green@imperial.ac.uk>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
@@ -17,3 +18,4 @@ Suggests: testthat,
 VignetteBuilder: knitr
 LinkingTo: Rcpp
 Imports: Rcpp
+BugReports: https://github.com/Health-Economics-in-R/CEdecisiontree/issues
