--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(dectree_expected_values.transmat)
 export(dectree_expected_values.tree_dat)
 export(define_model)
 export(get_children_list)
+export(is_prob_matrix)
 export(long_to_transmat)
 export(trans_binarytree)
 importFrom(Rcpp,sourceCpp)
