add pkgdown yaml webaddress

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -7,4 +7,4 @@ articles:
   probabilistic-sensitivity-analysis: probabilistic-sensitivity-analysis.html
   scenario-sensitivity-analysis: scenario-sensitivity-analysis.html
   Using_function_dispatch: Using_function_dispatch.html
-
+url: https://health-economics-in-r.github.io/CEdecisiontree
