--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ deploy:
   provider: script
   script: Rscript -e 'pkgdown::deploy_site_github()'
   skip_cleanup: true
+r_github_packages:
+  - r-lib/covr
+
+after_success:
+  - tar -C .. --xf $PKG_TARBALL
+  - Rscript -e 'covr::codecov()'
