--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ deploy:
   skip_cleanup: true
 r_github_packages:
   - r-lib/covr
+  - r-lib/pkgdown
 
 after_success:
   - tar -C .. --xf $PKG_TARBALL
   - Rscript -e 'covr::codecov()'
+  - rm -rf CEdecisiontree.Rcheck
+  - Rscript -e 'pkgdown::build_site()'
