--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 ## R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+## https://towardsdatascience.com/travis-ci-for-r-advanced-guide-719cb2d9e0e5
 
 language: R
 sudo: false
@@ -8,9 +9,20 @@ deploy:
   provider: script
   script: Rscript -e 'pkgdown::deploy_site_github()'
   skip_cleanup: true
+  - provider: pages
+      skip-cleanup: true
+      github-token: $GITHUB_TOKEN
+      keep-history: false
+      local-dir: docs
+      on:
+        branch: master
+
 r_github_packages:
   - r-lib/covr
+  - r-lib/pkgdown
 
 after_success:
   - tar -C .. --xf $PKG_TARBALL
   - Rscript -e 'covr::codecov()'
+  - rm -rf CEdecisiontree.Rcheck
+  - Rscript -e 'pkgdown::build_site()'
