other test scenarios data added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,14 @@ export(dectree_expected_values.dat_long)
 export(dectree_expected_values.transmat)
 export(dectree_expected_values.tree_dat)
 export(define_model)
+export(fill_complementary_probs)
 export(get_children_list)
+export(insert_to_transmat)
 export(is_prob_matrix)
 export(long_to_transmat)
+export(match_branch_to_label)
+export(match_branchlabel_to_prob)
 export(trans_binarytree)
+export(transmat_to_long)
 importFrom(Rcpp,sourceCpp)
 useDynLib(CEdecisiontree)
