--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(dectree_expected_values,transmat)
 S3method(dectree_expected_values,tree_dat)
 export(Cdectree_expected_values)
 export(branch_joint_probs)
+export(child_list_to_transmat)
 export(dectree_expected_recursive)
 export(dectree_expected_values)
 export(dectree_expected_values.dat_long)
@@ -19,6 +20,7 @@ export(long_to_transmat)
 export(match_branch_to_label)
 export(match_branchlabel_to_prob)
 export(trans_binarytree)
+export(transmat_to_child_list)
 export(transmat_to_long)
 importFrom(Rcpp,sourceCpp)
 useDynLib(CEdecisiontree)
