--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,5 +22,7 @@ export(match_branchlabel_to_prob)
 export(trans_binarytree)
 export(transmat_to_child_list)
 export(transmat_to_long)
+import(dplyr)
 importFrom(Rcpp,sourceCpp)
+importFrom(assertthat,assert_that)
 useDynLib(CEdecisiontree)
