fixed S3 documentation with @rdname

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,17 +3,15 @@
 S3method(branch_joint_probs,dat_long)
 S3method(branch_joint_probs,transmat)
 S3method(dectree_expected_values,dat_long)
-S3method(dectree_expected_values,default)
 S3method(dectree_expected_values,transmat)
 S3method(dectree_expected_values,tree_dat)
 export(Cdectree_expected_values)
 export(branch_joint_probs)
 export(child_list_to_transmat)
+export(dectree)
+export(dectree_expected_default)
 export(dectree_expected_recursive)
 export(dectree_expected_values)
-export(dectree_expected_values.dat_long)
-export(dectree_expected_values.transmat)
-export(dectree_expected_values.tree_dat)
 export(define_model)
 export(fill_complementary_probs)
 export(insert_to_costmat)
@@ -23,6 +21,8 @@ export(is_prob_matrix)
 export(long_to_transmat)
 export(match_branch_to_label)
 export(match_branchlabel_to_prob)
+export(new_dat_long)
+export(terminal_pop)
 export(trans_binarytree)
 export(transmat_to_child_list)
 export(transmat_to_long)
