--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: CEdecisiontree
 Type: Package
 Title: Cost-effectiveness decision tree analysis
 Version: 0.1.0
-Authors@R: person("Nathan", "Green", , "ngreen1@ic.ac.uk", role = c("aut", "cre"),
+Authors@R: person("Nathan", "Green", , "n.green@ucl.ac.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2745-1736"))
 Maintainer: The package maintainer <ngreen1@ic.ac.uk>
 Description: Cost-effectiveness decision tree analysis.
