fix branch joint ()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(dectree_expected_values,tree_dat)
 export(Cdectree_expected_values)
 export(branch_joint_probs)
 export(child_list_to_transmat)
+export(create_ce_tree_long_df)
 export(dectree)
 export(dectree_expected_default)
 export(dectree_expected_recursive)
@@ -22,11 +23,13 @@ export(long_to_transmat)
 export(match_branch_to_label)
 export(match_branchlabel_to_prob)
 export(new_dat_long)
+export(run_cedectree)
 export(terminal_pop)
 export(trans_binarytree)
 export(transmat_to_child_list)
 export(transmat_to_long)
 import(dplyr)
+import(reshape2)
 importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
 useDynLib(CEdecisiontree)
