--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(branch_joint_probs,transmat)
 S3method(dectree_expected_values,dat_long)
 S3method(dectree_expected_values,transmat)
 S3method(dectree_expected_values,tree_dat)
+export("%>%")
 export(Cdectree_expected_values)
 export(branch_joint_probs)
 export(child_list_to_transmat)
@@ -23,13 +24,21 @@ export(long_to_transmat)
 export(match_branch_to_label)
 export(match_branchlabel_to_prob)
 export(new_dat_long)
+export(new_models)
+export(new_transmat)
+export(new_tree_dat)
 export(run_cedectree)
 export(terminal_pop)
 export(trans_binarytree)
 export(transmat_to_child_list)
 export(transmat_to_long)
+export(validate_dat_long)
+export(validate_transmat)
+export(validate_tree_dat)
+export(validation)
 import(dplyr)
 import(reshape2)
 importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
+importFrom(magrittr,"%>%")
 useDynLib(CEdecisiontree)
