fixed basic errors in CHECK still need to fix warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ S3method(branch_joint_probs,transmat)
 S3method(dectree_expected_values,dat_long)
 S3method(dectree_expected_values,transmat)
 S3method(dectree_expected_values,tree_dat)
-export("%>%")
 export(Cdectree_expected_values)
 export(branch_joint_probs)
 export(child_list_to_transmat)
@@ -14,6 +13,7 @@ export(create_ce_tree_long_df)
 export(dectree)
 export(dectree_expected_default)
 export(dectree_expected_recursive)
+export(dectree_expected_recursive2)
 export(dectree_expected_values)
 export(define_model)
 export(fill_complementary_probs)
@@ -40,5 +40,6 @@ import(purrr)
 import(reshape2)
 importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
-importFrom(magrittr,"%>%")
+importFrom(dplyr,mutate)
+importFrom(reshape2,melt)
 useDynLib(CEdecisiontree)
