--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,26 +4,27 @@ Title: Cost-effectiveness decision tree analysis
 Version: 0.1.0
 Authors@R: person("Nathan", "Green", , "n.green@ucl.ac.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2745-1736"))
-Maintainer: The package maintainer <ngreen1@ic.ac.uk>
+Maintainer: Nathan Green <ngreen1@ic.ac.uk>
 Description: Cost-effectiveness decision tree analysis.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
 Imports:
     assertthat,
-    Rcpp,
-    heemod,
-    readr,
     dplyr,
+    heemod,
+    purrr,
+    readr,
+    Rcpp,
     reshape2,
+    tibble,
     tidyr,
-    magrittr
 Suggests:
-    testthat,
+    covr,
     knitr,
     rmarkdown,
-    covr
+    testthat,
 VignetteBuilder: knitr
 LinkingTo: Rcpp
 BugReports: https://github.com/Health-Economics-in-R/CEdecisiontree/issues
