--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(dectree_expected_values,tree_dat)
 export(Cdectree_expected_values)
 export(branch_joint_probs)
 export(child_list_to_transmat)
+export(create_ce_tree_df)
 export(create_ce_tree_long_df)
 export(dectree)
 export(dectree_expected_default)
