--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,5 +42,8 @@ import(reshape2)
 importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,mutate)
+importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
+importFrom(stats,setNames)
+importFrom(tibble,as_tibble)
 useDynLib(CEdecisiontree)
