--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,6 @@
+..Rcheck
+.gitignore
+.git
 ^docs$
 ^_pkgdown\.yml$
 ^LICENSE\.md$
@@ -10,3 +13,6 @@
 ^README\.Rmd$
 ^CODE_OF_CONDUCT\.md$
 ^\.github$
+^cran-comments\.md$
+^scripts/
+^vignettes/
