--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,12 +1,14 @@
-pandoc: 2.11.0.4
-pkgdown: 1.6.1
+pandoc: '2.18'
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   build_tree: build_tree.html
+  ce_analysis: ce_analysis.html
   comparison-with-other-packages: comparison-with-other-packages.html
   other-input-formats: other-input-formats.html
   probability-sensitivity-analysis: probability-sensitivity-analysis.html
+  quickstart: quickstart.html
   scenario-sensitivity-analysis: scenario-sensitivity-analysis.html
   Using_function_dispatch: Using_function_dispatch.html
-last_built: 2021-04-03T14:45Z
+last_built: 2022-07-29T18:30Z
 
