--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(branch_joint_probs)
 export(child_list_to_transmat)
 export(create_ce_tree_df)
 export(create_ce_tree_long_df)
+export(create_psa_inputs)
 export(dectree)
 export(dectree_expected_default)
 export(dectree_expected_recursive)
