--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ S3method(dectree_expected_values,dat_long)
 S3method(dectree_expected_values,transmat)
 S3method(dectree_expected_values,tree_dat)
 export(Cdectree_expected_values)
+export(MoM_beta)
+export(MoM_gamma)
 export(branch_joint_probs)
 export(child_list_to_transmat)
 export(create_ce_tree_df)
@@ -18,7 +20,9 @@ export(dectree_expected_recursive)
 export(dectree_expected_recursive2)
 export(dectree_expected_values)
 export(define_model)
+export(f_NodeUniform)
 export(fill_complementary_probs)
+export(get_sd_from_normalCI)
 export(insert_to_costmat)
 export(insert_to_probmat)
 export(insert_to_transmat)
@@ -26,10 +30,15 @@ export(is_prob_matrix)
 export(long_to_transmat)
 export(match_branch_to_label)
 export(match_branchlabel_to_prob)
+export(meanNodeUniform)
 export(new_dat_long)
 export(new_transmat)
 export(new_tree_dat)
+export(rpert)
 export(run_cedectree)
+export(sampleNode)
+export(sampleNodeUniform)
+export(sample_distributions)
 export(terminal_pop)
 export(trans_binarytree)
 export(transmat_to_child_list)
