removed some accidentally included treeSimR functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,6 @@ export(dectree_expected_recursive)
 export(dectree_expected_recursive2)
 export(dectree_expected_values)
 export(define_model)
-export(f_NodeUniform)
 export(fill_complementary_probs)
 export(get_sd_from_normalCI)
 export(insert_to_costmat)
@@ -30,14 +29,11 @@ export(is_prob_matrix)
 export(long_to_transmat)
 export(match_branch_to_label)
 export(match_branchlabel_to_prob)
-export(meanNodeUniform)
 export(new_dat_long)
 export(new_transmat)
 export(new_tree_dat)
 export(rpert)
 export(run_cedectree)
-export(sampleNode)
-export(sampleNodeUniform)
 export(sample_distributions)
 export(terminal_pop)
 export(trans_binarytree)
@@ -52,6 +48,7 @@ import(reshape2)
 importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,mutate)
+importFrom(purrr,map_dbl)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(stats,setNames)
